# oxc

./: Cargo.toml
apps/oxlint/: package.json
apps/oxlint/test/: utils.ts
crates/oxc_codegen/: Cargo.toml
crates/oxc_codegen/docs/: codegen_bare_metal_strategy.md  codegen_fast_plan.md
crates/oxc_codegen/examples/: perf.rs
crates/oxc_codegen/src/: binary_expr_visitor.rs  comment.rs  fast_buffer.rs  fast_gen.rs  gen.rs  lib.rs  sourcemap_builder.rs  str.rs  utf8.rs
crates/oxc_data_structures/src/: code_buffer.rs
crates/oxc_metal_parser/: BUILD_GUIDE.md  Cargo.toml  FEEDBACK.md  IMPLEMENTATION-PLAN.md  LEARNINGS.md  PLAN.md  ROLLOUT_PLAN.md  THEORETICAL_LIMIT.md  THIS_HARDWARE.md
crates/oxc_metal_parser/examples/: check.rs  correctness.rs  diff.rs  perf.rs  selfcheck.rs  spob.rs  tokdiff.rs
crates/oxc_metal_parser/fixtures/: larger.js  simple.js  three.js
crates/oxc_metal_parser/src/: ast_emit.rs  lib.rs
crates/oxc_metal_parser/src/hot/: backend.rs  mod.rs
crates/oxc_metal_parser/src/parser/: mod.rs
crates/oxc_metal_parser/src/token/: mod.rs
crates/oxc_metal_parser/tests/: basic.rs
crates/oxc_parser/src/js/: mod.rs
tasks/common/: Cargo.toml
tasks/common/src/: lib.rs  offline_fixtures.rs  request.rs  test_file.rs
