[package]
name = "oxc_metal_parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

# Used in examples/tests
oxc_parser = { workspace = true, features = ["regular_expression"] }

[dev-dependencies]
insta = { workspace = true }

[lib]
name = "oxc_metal_parser"
path = "src/lib.rs"

[[example]]
name = "spob"
path = "examples/spob.rs"

[[example]]
name = "diff"
path = "examples/diff.rs"

[[example]]
name = "perf"
path = "examples/perf.rs"
